--- a/index.html
+++ b/index.html
@@ -786,6 +786,12 @@
                 
                 <div class="engagement-images">
                     <div class="engagement-image">
+                        <img src="images/dons.jpeg" alt="Responsable celulle dons">
+                        <div class="image-overlay">
+                            <span>Responsable celulle dons</span>
+                        </div>
+                    </div>
+                    <div class="engagement-image">
                         <img src="images/medical.jpg" alt="Action médicale">
                         <div class="image-overlay">
                             <span>Action médicale</span>
