Update HTML & CSS

--- a/index.html
+++ b/index.html
@@ -783,14 +783,13 @@
                         positif sur la communauté.
                     </p>
                 </div>
-                
-                <div class="engagement-images">
-                    <div class="engagement-image">
-                        <img src="images/dons.jpeg" alt="Responsable celulle dons">
-                        <div class="image-overlay">
-                            <span>Responsable celulle dons</span>
-                        </div>
+                <div class="engagement-image single">
+                    <img src="images/dons.jpeg" alt="Responsable cellule dons">
+                    <div class="image-overlay">
+                        <span>Responsable cellule dons</span>
                     </div>
+                </div>
+                <div class="engagement-images">
                     <div class="engagement-image">
                         <img src="images/medical.jpg" alt="Action médicale">
                         <div class="image-overlay">
